# ik_solver

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ik_solver.repos  package.xml
build-ik_solver-Desktop-Debug/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-ik_solver-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-77341c94f73eddc9ca0b.json  cmakeFiles-v1-a8be453c5ad4d0ac0608.json  codemodel-v2-54885aaca0c1b27bff55.json  directory-.-Debug-f8b0f5b87a43c68f6928.json  index-2025-12-05T08-43-32-0076.json  target-gtest-Debug-ccc3cb7ce104735f078d.json  target-gtest_main-Debug-2675c3922a4d737894f0.json  target-ik_solver-Debug-0f22380ab1db77a4353a.json  target-ik_solver_node-Debug-16b4f04586dab2751429.json  target-ik_solver_uninstall-Debug-359da9e2f2617b6067c3.json  target-test_node_ros2-Debug-b0c0ebffa688c8942998.json  target-uninstall-Debug-5d367e8c21aa0c389340.json
build-ik_solver-Desktop-Debug/ament_cmake_core/: ik_solverConfig.cmake  package.cmake
build-ik_solver-Desktop-Debug/ament_cmake_core/stamps/: ament_cmake_export_dependencies-extras.cmake.stamp
build-ik_solver-Desktop-Debug/ament_cmake_environment_hooks/: local_setup.dsv  local_setup.sh  package.dsv
build-ik_solver-Desktop-Debug/ament_cmake_export_targets/: ament_cmake_export_targets-extras.cmake
build-ik_solver-Desktop-Debug/ament_cmake_index/share/ament_index/resource_index/package_run_dependencies/: ik_solver
build-ik_solver-Desktop-Debug/ament_cmake_index/share/ament_index/resource_index/parent_prefix_path/: ik_solver
build-ik_solver-Desktop-Debug/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
build-ik_solver-Desktop-Debug/gtest/: CTestTestfile.cmake  Makefile
build-ik_solver_core-Desktop-Debug/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  ik_solver_coreConfig.cmake
build-ik_solver_core-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-ea947a4b3dc34e923b1c.json  cmakeFiles-v1-388a86b19c967b8bffc0.json  codemodel-v2-81bcc75d34241f2587de.json  directory-.-Debug-8023a88fc8f1f97a6d08.json  index-2025-12-11T19-06-43-0497.json  target-ik_solver_core-Debug-ad93388604c1ab7a6547.json  target-ik_solver_core_uninstall-Debug-52f2e9fafec17768109c.json  target-ik_solver_core_utilities-Debug-3c94d607614f95fd713a.json  target-uninstall-Debug-585d4c21bdd7879b1f9e.json
build-ik_solver_core-Desktop-Debug/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
config/: params.yaml.template
ik_solver/: CMakeLists.txt  package.xml
ik_solver/config/: config.yaml.template  config_example.yaml  default_logger.yaml  rdyn_config_example_1.yaml
ik_solver/examples/: config.example.yaml  config_example.yaml  kuka_ik_solver.yaml  rdyn_config_example_1.yaml
ik_solver/include/ik_solver/: ik_solver.hpp
ik_solver/include/ik_solver/internal/: get_tf.hpp  ik_solver_node.ros2.hpp  ik_solver_node_2.hpp  services.h  services.ros1.h  services.ros2.h  services_1.h  services_2.h  services_common.h  types.h  utils.h  wsq.h
ik_solver/launch/: ik_solver.launch.py  ik_solver_1.py
ik_solver/scripts/: get_ik_collision_check.py  get_tf_ik.py  get_tf_ik_array.py  get_tf_ik_ros2.py  neighbourhood_ik.py  test_neighbourhood_ik.py
ik_solver/src/: node.cpp  node.ros2.cpp  node_1.cpp  node_2.cpp
ik_solver/src/internal/: services.cpp  services.ros1.cpp  services.ros2.cpp  services_1.cpp  services_2.cpp  services_common.cpp  types.cpp  utils.cpp
ik_solver/test/: test_node.cpp  test_node_2.cpp
ik_solver_core/: CMakeLists.txt  frames.gv  ik_solver_coreConfig.cmake.in  no-package.xml  package.xml
ik_solver_core/config/: config.yaml.template  default_logger.yaml
ik_solver_core/include/ik_solver_core/: ik_solver_base_class.h  math.h  string.h  types.h  utils.h
ik_solver_core/include/ik_solver_core/internal/: ik_solver_base_class_impl.h  types.h  utils.h  wsq.h
ik_solver_core/src/ik_solver_core/: ik_solver_base_class.cpp  math.cpp  string.cpp  types.cpp  utils.cpp
ik_solver_core/src/ik_solver_core/internal/: utils.cpp
ik_solver_ros/: CMakeLists.txt  package.xml
ik_solver_ros/include/ik_solver_ros/: conversions.h  ik_solver_ros.h  utils.h
ik_solver_ros/src/: ik_solver_ros_node.cpp
ik_solver_ros/src/ik_solver_ros/: conversions.cpp  ik_solver_ros.cpp  utils.cpp
ik_solver_test/: CMakeLists.txt  package.xml  test.plugin.xml
ik_solver_test/config/: ik_solver_config_kuka.yaml
ik_solver_test/include/ik_solver_test/: test_ik_solver_plugin.hpp
ik_solver_test/launch/: kuka_ik_solver.py
ik_solver_test/scripts/: test_ik_fk.py
ik_solver_test/src/: test_ik_solver_plugin.cpp
include/ik_solver/: ik_solver_base_class.h
include/ik_solver/internal/: SafeQueue.h  ik_solver_base_class_impl.h  parallel_computing.h  services.h  types.h  utils.h
scripts/: get_ik_collision_check.py  get_tf_ik.py  get_tf_ik_array.py  neighbourhood_ik.py  test_neighbourhood_ik.py
src/: node.cpp
src/internal/: services.cpp  types.cpp  utils.cpp
