<?xml version="1.0"?>
<package format="2">
  <name>ik_solver</name>
  <version>0.0.0</version>
  <description>The ik_solver package</description>

  <maintainer email="manuel.beschi@unibs.it">Manuel Beschi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>ik_solver_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_export_depend>eigen_conversions</build_export_depend>
  <build_export_depend>ik_solver_msgs</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf_conversions</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>ik_solver_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>urdf</exec_depend>

  <depend>moveit_ros_move_group</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_ros_planning_interface</depend>
  <export>
  </export>
</package>
