<?xml version="1.0"?>
<package format="3">
  <name>ik_solver</name>
  <version>0.0.0</version>
  <description>The ik_solver package</description>

  <maintainer email="manuel.beschi@unibs.it">Manuel Beschi</maintainer>

  <license>BSD</license>

  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <!-- ROS1 -->
  <build_depend condition="$ROS_VERSION == 1">eigen_conversions</build_depend>
  <build_depend condition="$ROS_VERSION == 1">tf_conversions   </build_depend>
  <build_depend condition="$ROS_VERSION == 1">roscpp           </build_depend>
  <build_depend condition="$ROS_VERSION == 1">tf               </build_depend>
  <build_depend condition="$ROS_VERSION == 1">urdf             </build_depend>
  <build_export_depend condition="$ROS_VERSION == 1">eigen_conversions</build_export_depend>
  <build_export_depend condition="$ROS_VERSION == 1">tf_conversions   </build_export_depend>
  <build_export_depend condition="$ROS_VERSION == 1">roscpp           </build_export_depend>
  <build_export_depend condition="$ROS_VERSION == 1">tf               </build_export_depend>
  <build_export_depend condition="$ROS_VERSION == 1">urdf             </build_export_depend>
  <exec_depend condition="$ROS_VERSION == 1">eigen_conversions</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">tf_conversions   </exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">roscpp           </exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">tf               </exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">urdf             </exec_depend>
  <depend condition="$ROS_VERSION == 1">cnr_param             </depend>
  <depend condition="$ROS_VERSION == 1">cnr_logger             </depend>
  <depend condition="$ROS_VERSION == 1">ik_solver_core             </depend>

  <!-- ROS2 -->
  <build_depend condition="$ROS_VERSION == 2">rclcpp           </build_depend>
  <build_depend condition="$ROS_VERSION == 2">tf2              </build_depend>
  <build_export_depend condition="$ROS_VERSION == 2">rclcpp           </build_export_depend>
  <build_export_depend condition="$ROS_VERSION == 2">tf2              </build_export_depend>
  <exec_depend condition="$ROS_VERSION == 2">rclcpp           </exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">tf2              </exec_depend>

  <!-- Common -->
  <build_depend>ik_solver_msgs</build_depend>
  <build_depend>pluginlib     </build_depend>
  <build_depend>std_srvs      </build_depend>
  <build_depend>geometry_msgs </build_depend>
  <build_export_depend>ik_solver_msgs</build_export_depend>
  <build_export_depend>pluginlib     </build_export_depend>
  <build_export_depend>std_srvs      </build_export_depend>
  <build_export_depend>geometry_msgs </build_export_depend>
  <exec_depend>ik_solver_msgs</exec_depend>
  <exec_depend>pluginlib     </exec_depend>
  <exec_depend>std_srvs      </exec_depend>
  <exec_depend>geometry_msgs </exec_depend>
  
  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
