<?xml version="1.0"?>
<package format="2">
  <name>ik_solver_core</name>
  <version>0.0.0</version>
  <description>The ik_solver_core package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="laplace@todo.todo">laplace</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>cnr_param</depend>
  <depend>cnr_logger</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
